--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<html>
-<body>Here are my favourite games:</body>
+<!doctype html><html>
+<body>
+Here are my favourite games:
+<ul>
+  <li>clone drone in the danger zone</li>
+  <li>subnautica</li>
+  <li>slime rancher</li>
+  <li> Zelda: Breath of the Wild</li>
+  <li>super maro cart 8 delux</li>
+  <li>mincraft</li>
+  <li>roblox</li>
+  <li>tralmakers</li>
+</ul>
+</body>
 </html>
